Web Inspector: Unable to get cursor in new Rule section after creating multiple New Rules https://bugs.webkit.org/show_bug.cgi?id=145294

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-05-22
Reviewed by Timothy Hatcher.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::ensureParsedDataReady):
Allow stylesheets with mutations for the inspector stylesheet
which we control mutations of.

Canonical link: https://commits.webkit.org/163322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184792 268f45cc-cd09-0410-ab3c-d52691b4dbfc